<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".Activity.SignUpCongratsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/thank_you_image"
            android:layout_width="@dimen/margin_140dp"
            android:layout_height="@dimen/margin_50dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_30dp"
            android:background="@drawable/marke8hub" />

        <com.example.prithvi.marke8hub.Views.BRBTextView
            android:id="@+id/tv_thanks"
            android:layout_marginTop="@dimen/margin_35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thanks_heading"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/margin_19dp"
            android:gravity="center"
            android:layout_below="@+id/thank_you_image"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <com.example.prithvi.marke8hub.Views.BRTextView
                android:id="@+id/tv_thanks_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/thanks_1"
                android:textColor="@color/sub_heading_grey"
                android:textSize="@dimen/margin_15sp" />

            <com.example.prithvi.marke8hub.Views.BRTextView
                android:id="@+id/tv_thanks_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_25dp"
                android:layout_marginEnd="@dimen/margin_25dp"
                android:textAlignment="center"
                android:text="@string/thanks_2"
                android:textColor="@color/sub_heading_grey"
                android:textSize="@dimen/margin_15sp" />
        </LinearLayout>

    </RelativeLayout>

    <com.example.prithvi.marke8hub.Views.BRButton
        android:id="@+id/continue_btn"
        style="@style/submitButtonLayout"
        android:layout_centerHorizontal="true"
        android:background="@drawable/canvas_sign_btn"
        android:text="Continue"/>

</RelativeLayout>